[package]
name = "gen_blob_test_data"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version="1.0.145",features = ["derive"]}
serde_json = "1.0.86"
rand = "0.8.5"
tar = "0.4.38"
flate2 = { version = "1.0.24", features = ["zlib-ng"]}
clap = { version = "4.0.15", features = ["derive"] }


[dependencies.uuid]
version = "1.2.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
